Physical delete (API)
