# pybookstore/config/api/swagger.yml
@@ -105,56 +105,6 @@ paths:
         201:
           description: CREATED
 
-    put:
-      operationId: pybookstore.api.books.update
-      tags:
-        - Books
-      summary: Update a book
-      description: Update a book
-      parameters:
-        - name: book
-          in: body
-          description: update a book
-          required: True
-          schema:
-            type: object
-            properties:
-              id:
-                type: integer
-              title:
-                type: string
-              subtitle:
-                type: string
-              price:
-                type: number
-              height:
-                type: number
-              width:
-                type: number
-              weight:
-                type: number
-              author:
-                type: string
-              description:
-                type: string
-              year:
-                type: integer
-              format:
-                type: string
-              pages:
-                type: integer
-              language:
-                type: string
-              publisher:
-                type: string
-              edition:
-                type: integer
-              isbn:
-                type: string
-      responses:
-        200:
-          description: OK
-
 
   /books/{book_id}:
     get:
@@ -166,7 +116,7 @@ paths:
       parameters:
         - name: book_id
           in: path
-          required: true
+          required: True
           description: ID of the book
           type: integer
       responses:
@@ -206,3 +156,73 @@ paths:
                 type: integer
               isbn:
                 type: string
+
+
+    put:
+      operationId: pybookstore.api.books.update
+      tags:
+        - Books
+      summary: Update a book
+      description: Update a book
+      parameters:
+        - name: book_id
+          in: path
+          required: True
+          description: ID of the book
+          type: integer
+        - name: book
+          in: body
+          description: update a book
+          required: True
+          schema:
+            type: object
+            properties:
+              title:
+                type: string
+              subtitle:
+                type: string
+              price:
+                type: number
+              height:
+                type: number
+              width:
+                type: number
+              weight:
+                type: number
+              author:
+                type: string
+              description:
+                type: string
+              year:
+                type: integer
+              format:
+                type: string
+              pages:
+                type: integer
+              language:
+                type: string
+              publisher:
+                type: string
+              edition:
+                type: integer
+              isbn:
+                type: string
+      responses:
+        200:
+          description: OK
+
+    delete:
+      operationId: pybookstore.api.books.delete
+      tags:
+        - Books
+      summary: Delete a book
+      description: Delete a book
+      parameters:
+        - name: book_id
+          in: path
+          required: True
+          description: ID of the book
+          type: integer
+      responses:
+        200:
+          description: OK
